--- a/composer.json
+++ b/composer.json
@@ -88,6 +88,7 @@
             "@auto-scripts"
         ],
         "compile": [
+            "php bin/console d:d:c"
             "php bin/console doctrine:migrations:migrate"
         ]
     },
