--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,14 @@ services:
             POSTGRES_PASSWORD: main
             POSTGRES_DB: main
         ports: [5432]
+    
+    phppgadmin:
+        container_name: phppgadmin
+        image: neimheadh/phppgadmin:latest
+        ports: 
+            - "10080:80"
+        environment: 
+            - POSTGRES_HOST=postgres
+            - POSTGRES_PORT=5432
+            - POSTGRES_USER=main
+            - POSTGRES_PASSWORD=main
